# hobby_path_tracer

./: CMakeLists.txt  README.md  calculations.nb  path_trace.cpp  rt.cpp
